--- a/PROJECT/styles.css
+++ b/PROJECT/styles.css
@@ -13,12 +13,12 @@
     padding: 10px 80px;
     align-items: center;
 }
-header, .footer {
+header {
     display: flex;
-    justify-content: flex-end;
+    padding: 0 10px;
     align-items: center;
     background-color: #079a9a;
-    padding: 0 10px;
+    justify-content: flex-end;
 }
 .nav-list li {
     display: inline-block;
@@ -44,7 +44,7 @@ header, .footer {
     padding: 0 70px;
     align-items: center;
 }
-header, .footer {
+header {
     display: flex;
     justify-content: flex-end;
     background-color: #079a9a;
@@ -65,12 +65,12 @@ header, .footer {
 
 @media screen and (max-width: 450px) {
 .content {
-        display: inline-block;
-        width: 100%;
-        padding: 0 30px;
-        margin: 10px auto;
-        align-items: center;
-    }
+    display: inline-block;
+    width: 100%;
+    padding: 0 30px;
+    margin: 10px auto;
+    align-items: center;
+}
 .left-div, .right-div {
     margin: 15px auto;
     padding: 0;
@@ -84,25 +84,20 @@ header, .footer {
     padding: 10px;
     margin: 0 5px;
 }
-header, .footer {
+header {
     display: block;
     background-color: #079a9a;
     margin: 5px 0;
     padding: 0 10px;
 }
-.foot-list {
-    margin-bottom: 15px;
-}
-.conn {
-    margin-top: 15px;
-}
+
 .forms {
-    display: flex;
-    margin: 2% auto;
+    display: inline-block;
+    margin: 5% auto;
     width: 100%;
 }
 }
-    
+
 * {
     font-family: 'Source Code Pro', monospace;
     font-weight: 400;
@@ -132,20 +127,6 @@ li, a {
     text-decoration: none;
 }
 
-.foot-list {
-    margin-right: auto;
-    list-style: none;
-}
-
-.email-div {
-    display: flex;
-    margin: 0 5px;
-}
-
-.foot-signup {
-    margin-right: auto;
-}
-
 .copyright {
     text-align: center;
     margin-top: 10px;
@@ -157,7 +138,6 @@ fieldset {
 }
 .login_field {
     line-height: 30px;
-    margin-top: 100px;
 }
 .right-div label {
     line-height: 30px;
@@ -192,25 +172,22 @@ fieldset {
 .newsletter-input {
     margin-right: 10px;
 }
-
-.conn-logo {
-    width: 30px;
-    height: 30px;
-    margin: 5px;
-}
-.conn-div {
-    display: inline-block;
-}
 footer {
-    background-color: #b4e6e6;
+    margin-top: auto;
+    min-height: 50px;
+    background: PapayaWhip;
+    background-color: #079a9a;
 }
 .left-div a {
     color: rosybrown;
     margin: 0 auto;
     text-decoration: underline;
 }
-
 body {
+    height: 100vh;
+    margin: 0;
+    display: flex; 
+    flex-direction: column;
     background-color: #b4e6e6;
 }
 .main {
@@ -218,20 +195,19 @@ body {
 }
 .homeHeading {
     color: #808080;
-    font-size: 50px;
+    font-size: 1.5em;
     text-align: center;
 }
 .main p {
     margin-top: 2%;
 }
-
 .main img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 100%;
-      max-width: 400px;
-      height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 200px;
+    height: auto;
 }
 .register {
     flex: 0 0 50%;
